assets/css/style.css
* {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}

html,body
{
    width: 100%;
    height: 100%;
    margin: 0px;
    padding: 0px;
    overflow-x: hidden;
}


.main {
  background-image: url('../img/Nueva carpeta/3701120b1b90c27bc883d1e0d8500cfa.png');
  background-position: 50% -5%;
  background-repeat: no-repeat;
  background-size: 40em 50em;
  height: 90vh;
  font-family: 'Amatic SC', 'cursive';
}



.dots {
  text-align: center;
  padding-top: 1em;
}

.tip {
  font-size: 0.9em;
  color: #CD3173;
  display: inline-block;
}

.dot {
  width: 3em;
  height: 3em;
  display: inline-block;
  padding: 1em;

}

.flower-dot {
  width: 3em;
  height: 3em;
  display: inline-block;
  padding: 1em; }

.dot:hover, .flower-dot:hover {
  cursor: pointer;
}

#title {
  text-align: center;
  padding-top: 10em;
}


.myself {
  padding: 5em;
}

.know-me{
  margin-top: 4em;
  padding-top: 2em;
  margin-bottom: 5em;
  padding: 2em;
  background-color: #D18F99;
  border-radius: 1.5em;
  margin-left: 2em;
  color: #fff;
}

.crowns {
  width: 8em;
  height: 4em;
  display: inline-block;
  text-align: center;
  padding: 2em;
  padding-bottom: 15em;
}

.projects{
  height: 90vh;
  background-image: url('../img/Nueva carpeta/64b485538f8788c4735115d3d700512e.png');
  background-repeat:no-repeat;
  background-position: 0% 80%;
}

.contact{
  height: 90vh;
}
.fa-envelope, .fa-linkedin-in, .fa-github {
  color: #b76e79;
  font-size: 3em;
  text-align: center;
}

.icons {
  text-align: center;
  padding-top: 13em;
  padding-left: 20em;
}

.develop {
  width: 100%;
  padding: 3em;
  background-color: #b76e79;
  color:#fff;
  text-align: center;
  position: absolute;
  bottom: 0;
  left: 0;
  right: 0;
}
/*
.carousel {
  height: 600px !important;
  margin-top: 9em !important;

}

.carousel-item {
  width: 600px !important;
  height: 300px !important;
}*/
.one {
  background-repeat: no-repeat;
  background-image: url('../img/projects/artgallery.PNG');
  background-size: cover;
  background-position: center;
}

.two {
  background-repeat: no-repeat;
  background-image: url('../img/projects/trello.png');
  background-size: cover;
  background-position: center;
}

.three {
  background-repeat: no-repeat;
  background-image: url('../img/projects/addictive.png');
  background-size: cover;
  background-position: center;
}

.four {
  background-repeat: no-repeat;
  background-image: url('../img/projects/labcar.png');
  background-size: cover;
  background-position: center;
}

.five {
  background-repeat: no-repeat;
  background-image: url('../img/projects/ahorrockets.png');
  background-size: cover;
  background-position: center;
}


/*MEDIA QUERIES*/

@media (min-width: 320px) and (max-width: 375px) {
   .crowns {
  width: 16em;
  height: 8em;
  padding-bottom: 6em;
  padding-top: 2em;
}

.know-me {
  padding-top: 2em;
}
/*
.carousel {
   height: 200px !important;
  margin-top: 5em;
}

.carousel-item {
  width: 250px !important;
  height: 200px !important;
}
*/
.icons {
  padding-top: 8em;
  padding-left: 0;
}


}

@media (min-width: 375px) and (max-width: 667px) {
   .crowns {
  padding-bottom: 10em;
}

.know-me {
  padding-top: 4em;
}
/*
.carousel {
   height: 600px !important;
  margin-top:3em;
}

.carousel-item {
  width: 250px !important;
  height: 600px !important;
}
*/

.icons {
  padding-top: 8em;
  padding-left: 0;
}

}

@media (min-width: 667px) and (max-width: 1024px) {
  .crowns {
  width: 16em;
  height: 8em;
  padding-bottom: 30em;
  padding-top: 2em;
}

.know-me {
  padding-top: 5em;
  margin-left: 5em;
}
/*
.carousel {
   height: 200px !important;
  margin-top:3em;
}

.carousel-item {
  width: 400px !important;
  height: 200px !important;
}
*/
.icons {
  padding-top: 8em;
  padding-left: 0;
}

}

@media (min-width: 1024px) and (max-width: 1440px) {
  .crowns {
  padding-bottom: 10em;
}

.know-me {
  margin-left: 2em;
  margin-top: 2em;
}
/*
.carousel {
   height: 300px !important;
  margin-top:3em;
}

.carousel-item {
  width: 600px !important;
  height: 300px !important;
}*/
.icons {
  text-align: center;
  padding-top: 8em;
  padding-left: 13em;
}
}

@media (min-width: 1440px) and (max-width: 1600px) {
  .crowns {
  padding-bottom: 15em;
}

.know-me {
  margin-top: 5em;
}
/*
.carousel {
   height: 300px !important;
  margin-top: 9em;
}

.carousel-item {
  width: 600px !important;
  height: 300px !important;
}*/
.icons {
  text-align: center;
  padding-top: 10em;
  padding-left: 20em;
}
}

.avia_mobile #top .av-parallax-section{
  -webkit-transform: translate3d(0,0,0);
}

.carousel {
  z-index: 10000000000;
}

